Add jvmArgs for CommandsV3 (#819)
Fixes #812

Co-authored-by: Thad House <thadhouse1@gmail.com>